--- a/src/data/config.json
+++ b/src/data/config.json
@@ -1,1 +1,7 @@
-{"isLocked":false}
+{
+  "isLocked": false,
+  "email": {
+    "user": "hoangduytn1703@gmail.com",
+    "pass": "vpzh fnrq wxdw okyc"
+  }
+}
