--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     },
     "dependencies": {
         "cors": "^2.8.5",
-        "express": "^4.21.2"
+        "express": "^4.21.2",
+        "nodemailer": "^6.10.0"
     },
     "type": "module"
 }
